--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <form class="delete-item">
+      <input type="delete" value="delete Item">
+    </form>
   </div>
 
 <script>
@@ -40,6 +43,7 @@
     }
     items.push(item);
     populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
     this.reset();
   }
 
@@ -47,13 +51,15 @@
     platesList.innerHTML = plates.map((plate, i) => {
       return`
         <li>
-          <label for = ""> ${plate.text}</label>  
+          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+          <label for = "item${i}"> ${plate.text}</label>  
         </li>
       `
     }).join('');
   }
 
 addItems.addEventListener('submit', addItem)
+
 </script>
 
 
