--- a/index.html
+++ b/index.html
@@ -24,41 +24,71 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
-    <form class="delete-item">
-      <input type="delete" value="delete Item">
+    <form class="delete-items">
+      <input type="button" value="Clear All">
     </form>
   </div>
 
 <script>
-  const addItems = document.querySelector('.add-items');
-  const itemsList = document.querySelector('.plates');
-  const items = [];
+const addItems = document.querySelector('.add-items');
+const itemsList = document.querySelector('.plates');
+const items = JSON.parse(localStorage.getItem('items')) || [];
+const clearItems = document.querySelectorAll('.delete-items');
 
-  function addItem(e) {
-    e.preventDefault();
-    const text = (this.querySelector('[name=item]')).value;
-    const item = {
-      text ,
-      done: false
-    }
-    items.push(item);
-    populateList(items, itemsList);
-    localStorage.setItem('items', JSON.stringify(items));
-    this.reset();
+function addItem(e) {
+  e.preventDefault();
+  const text = (this.querySelector('[name=item]')).value;
+  const item = {
+    text,
+    done: false
   }
+  items.push(item);
+  populateList(items, itemsList);
+  localStorage.setItem('items', JSON.stringify(items));
+  this.reset();
+}
 
-  function populateList(plates = [], platesList) {
-    platesList.innerHTML = plates.map((plate, i) => {
-      return`
-        <li>
-          <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
-          <label for = "item${i}"> ${plate.text}</label>  
-        </li>
-      `
-    }).join('');
-  }
+function populateList(plates = [], platesList) {
+  platesList.innerHTML = plates.map((plate, i) => {
+    return `
+      <li>
+        <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
+        <label for="item${i}">${plate.text}</label>  
+      </li>
+    `
+  }).join('');
+}
+
+function toggleDone(e) {
+  if (!e.target.matches('input')) return;
+  const el = e.target;
+  const index = el.dataset.index;
+  items[index].done = !items[index].done;
+  localStorage.setItem('items', JSON.stringify(items));
+  populateList(items, itemsList);
+}
+
+let item = JSON.parse(localStorage.getItem('items')) || [];
+
+// Attach click event listeners to clearItems elements
+clearItems.forEach(item => {
+  item.addEventListener('click', removeItemAll);
+});
+
+function removeItemAll() {
+  // Implement the logic to delete all items here
+  // For example:
+  // 1. Clear the itemsList element
+  itemsList.innerHTML = '';
+  // 2. Clear the localStorage
+  localStorage.removeItem('items');
+
+  items.length = 0;
+}
 
 addItems.addEventListener('submit', addItem)
+itemsList.addEventListener('click', toggleDone)
+populateList(items, itemsList)
 
 </script>
 
